@@ -1,0 +1,75 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<wsdl:definitions
+	xmlns="http://schemas.xmlsoap.org/wsdl/"
+	xmlns:wsdl="http://schemas.xmlsoap.org/wsdl/"
+	xmlns:xs="http://www.w3.org/2001/XMLSchema"
+	xmlns:ns="urn:ebay:api:PayPalAPI"
+	xmlns:wsdlsoap="http://schemas.xmlsoap.org/wsdl/soap/"
+	targetNamespace="urn:ebay:api:PayPalAPI">
+	<wsdl:types>
+		<schema xmlns="http://www.w3.org/2001/XMLSchema" targetNamespace="urn:ebay:api:PayPalAPI" elementFormDefault="qualified" attributeFormDefault="unqualified">
+			<complexType name="PayerInfoType">
+				<sequence>
+					<element name="Payer" type="xs:string" minOccurs="0"/>
+					<element name="PayerID" type="xs:string" minOccurs="0"/>
+					<element name="PayerStatus" type="xs:string" minOccurs="0"/>
+				</sequence>
+			</complexType>
+			<complexType name="AbstractResponseType" abstract="true">
+				<sequence>
+					<element name="Timestamp" type="xs:dateTime" minOccurs="0"/>
+					<element name="Ack" type="xs:string"/>
+					<element name="CorrelationID" type="xs:string" minOccurs="0"/>
+					<element name="Version" type="xs:string"/>
+					<element name="Build" type="xs:string"/>
+					<any processContents="lax" minOccurs="0"/>
+				</sequence>
+			</complexType>
+			<xs:element name="GetExpressCheckoutDetailsResponseDetails" type="ns:GetExpressCheckoutDetailsResponseDetailsType"/>
+			<xs:complexType name="GetExpressCheckoutDetailsResponseDetailsType">
+				<xs:sequence>
+					<xs:element name="Token" type="xs:string"/>
+					<xs:element name="PayerInfo" type="ns:PayerInfoType"/>
+				</xs:sequence>
+			</xs:complexType>
+			<xs:element name="GetExpressCheckoutDetailsResponse" type="ns:GetExpressCheckoutDetailsResponseType"/>
+			<xs:complexType name="GetExpressCheckoutDetailsResponseType">
+				<xs:complexContent>
+					<xs:extension base="ns:AbstractResponseType">
+						<xs:sequence>
+							<xs:element ref="ns:GetExpressCheckoutDetailsResponseDetails" minOccurs="1" maxOccurs="1"/>
+						</xs:sequence>
+					</xs:extension>
+				</xs:complexContent>
+			</xs:complexType>
+		</schema>
+	</wsdl:types>
+	<wsdl:message name="GetExpressCheckoutDetailsRequest">
+	</wsdl:message>
+	<wsdl:message name="GetExpressCheckoutDetailsResponse">
+		<wsdl:part name="GetExpressCheckoutDetailsResponse" element="ns:GetExpressCheckoutDetailsResponse"/>
+	</wsdl:message>
+	<wsdl:portType name="PayPalAPIAAInterface">
+		<wsdl:operation name="GetExpressCheckoutDetails">
+			<wsdl:input message="ns:GetExpressCheckoutDetailsRequest"/>
+			<wsdl:output message="ns:GetExpressCheckoutDetailsResponse"/>
+		</wsdl:operation>
+	</wsdl:portType>
+	<wsdl:binding name="PayPalAPIAASoapBinding" type="ns:PayPalAPIAAInterface">
+		<wsdlsoap:binding style="document" transport="http://schemas.xmlsoap.org/soap/http"/>
+		<wsdl:operation name="GetExpressCheckoutDetails">
+			<wsdlsoap:operation/>
+			<wsdl:input>
+				<wsdlsoap:body use="literal"/>
+			</wsdl:input>
+			<wsdl:output>
+				<wsdlsoap:body use="literal"/>
+			</wsdl:output>
+		</wsdl:operation>
+	</wsdl:binding>
+	<wsdl:service name="PayPalAPIInterfaceService">
+		<wsdl:port name="PayPalAPIAA" binding="ns:PayPalAPIAASoapBinding">
+			<wsdlsoap:address location="test://"/>
+		</wsdl:port>
+	</wsdl:service>
+</wsdl:definitions>
